show whitespaces in translation view correct, refs #41, #54

--- a/src/org/dokuwiki/translatorBundle/Resources/public/less/my.less
+++ b/src/org/dokuwiki/translatorBundle/Resources/public/less/my.less
@@ -27,6 +27,10 @@ img#logo {
                 width: 97%;
             }
         }
+
+        td.translation-original {
+            white-space: pre-wrap;
+        }
     }
 }
 
